# homepage

./: .ghci  .gitignore  README.md  Test.hs  default.nix  flake.nix  homepage.cabal
.github/workflows/: haskell.yml  main.yml
app/: Footer.hs  Header.hs  Index.hs  Interactive.hs  Layout.hs  Main.hs  Stylesheet.hs
app/Api/: Api.hs  Delete.hs  Get.hs  Post.hs  Put.hs  Types.hs
app/Helpers/: Cli.hs  CodeBlock.hs  Database.hs  Globals.hs  Logger.hs  Page.hs  Scripts.hs  Section.hs  Settings.hs  Tables.hs  Tree.hs  Utils.hs
app/Helpers/Database/: Database.hs  Schema.hs
app/Pages/: Pages.hs
app/Pages/Admin/: Admin.hs
app/Pages/Contact/: Contact.hs
app/Pages/Guestbook/: Guestbook.hs
app/Pages/Projects/: Brainfuck.hs  Editor.hs  Projects.hs  Snake.hs
app/Pages/Search/: Search.hs
app/Pages/Sources/: Repo.hs  Sources.hs
lib/: Calendar.hs  CodeBlock.hs  Logger.hs  P10.hs  Page.hs  Plot.hs  Repl.hs  Scripts.hs  Section.hs  Settings.hs  State.hs  Tables.hs  Tree.hs  Utils.hs
lib/Database/: Database.hs  Schema.hs
lib/P10/: Autoscaler.hs  Constants.hs  Migrate.hs  Monitor.hs  Prerequisites.hs
nix-support/: module.nix  package.nix  vm.nix
scripts/: migrate.py
static/: app.js  stylesheet.css
static/prism/: prism.css  prism.js
static/projects/: snake.css  snake.js
test/: Main.hs
