cabal-version:      2.4
name:               homepage
version:            0.1.0.0

executable homepage
    main-is:          Main.hs
    other-modules:
        Footer,
        Header,
        Index,
        Layout,
        Helpers.CodeBlock,
        Helpers.Section,
        Helpers.Tree,
        Helpers.Utils,
        Helpers.Database,
        Helpers.Settings,
        Helpers.Tables,
        Helpers.Logger,
        Helpers.Cli
        Api.Api,
        Pages.Contact.Contact,
        Pages.Projects.Projects,
        Pages.Projects.Snake,
        Pages.Guestbook.Guestbook,
        Pages.Sources.Sources,
        Pages.Admin.Admin

    build-depends:
        base,
        ihp-hsx,
        blaze-html,
        text,
        warp,
        wai,
        http-types,
        blaze-builder,
        utf8-string,
        bytestring,
        sqlite-simple,
        time,
        uuid,
        directory,
        aeson,
        split,
        password,
        cryptonite,
        string-random

    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        QuasiQuotes,
        OverloadedStrings

    ghc-options:
        -threaded

executable cli
    main-is: Interactive.hs
    other-modules:
        Helpers.Logger,
        Helpers.Database,
        Helpers.Cli,
        Helpers.Settings,
        Helpers.Tree,
        Helpers.Utils

    build-depends:
        base,
        ihp-hsx,
        blaze-html,
        text,
        warp,
        wai,
        http-types,
        blaze-builder,
        utf8-string,
        bytestring,
        sqlite-simple,
        time,
        uuid,
        directory,
        aeson,
        split,
        password,
        cryptonite,
        string-random

    hs-source-dirs: app
    default-extensions:
        QuasiQuotes,
        OverloadedStrings