cabal-version:      2.4
name:               homepage
version:            0.1.0.0

executable homepage
    main-is:          Main.hs
    other-modules:
        Footer,
        Header,
        Index,
        Layout,
        Helpers.CodeBlock,
        Helpers.Section,
        Helpers.Tree,
        Helpers.Utils,
        Helpers.Database.Database,
        Helpers.Database.Schema,
        Helpers.Settings,
        Helpers.Tables,
        Helpers.Logger,
        Helpers.Cli,
        Helpers.Scripts,
        Helpers.Page,
        Api.Api,
        Pages.Pages,
        Pages.Search.Search,
        Pages.Contact.Contact,
        Pages.Projects.Projects,
        Pages.Projects.Snake,
        Pages.Guestbook.Guestbook,
        Pages.Sources.Sources,
        Pages.Sources.Repo,
        Pages.Admin.Admin

    build-depends:
        base,
        ihp-hsx,
        blaze-html,
        text,
        warp,
        wai,
        http-types,
        blaze-builder,
        utf8-string,
        bytestring,
        time,
        uuid,
        directory,
        aeson,
        split,
        password,
        cryptonite,
        string-random,
        regex-compat,
        http-conduit,
        yaml,
        persistent,
        persistent-mysql,
        monad-logger

    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        QuasiQuotes,
        OverloadedStrings

    ghc-options:
        -threaded

executable cli
    main-is: Interactive.hs
    other-modules:
        Helpers.Logger,
        Helpers.Database.Database,
        Helpers.Database.Schema,
        Helpers.Cli,
        Helpers.Settings,
        Helpers.Tree,
        Helpers.Utils

    build-depends:
        base,
        ihp-hsx,
        blaze-html,
        text,
        warp,
        wai,
        http-types,
        blaze-builder,
        utf8-string,
        bytestring,
        time,
        uuid,
        directory,
        aeson,
        split,
        password,
        cryptonite,
        string-random,
        persistent,
        persistent-mysql,
        monad-logger

    hs-source-dirs: app
    default-extensions:
        QuasiQuotes,
        OverloadedStrings