cabal-version:      2.4
name:               homepage
version:            0.1.1

library lib-homepage
    exposed-modules:
        Settings,
        Database.Database,
        Database.Schema
        CodeBlock,
        Section,
        Tree,
        Utils,
        Logger,
        Repl,
        Scripts,
        Page,
        State,
        Plot,
        Calendar,
        P10
    build-depends:
        base,
        ihp-hsx,
        blaze-html,
        text,
        warp,
        wai,
        http-types,
        blaze-builder,
        utf8-string,
        bytestring,
        time,
        uuid,
        directory,
        aeson,
        aeson-qq,
        split,
        password,
        cryptonite,
        string-random,
        regex-compat,
        http-conduit,
        yaml,
        persistent,
        persistent-mysql,
        persistent-sqlite,
        persistent-postgresql,
        monad-logger,
        raw-strings-qq,
        rawstring-qm,
        matplotlib
    hs-source-dirs:   lib
    default-language: GHC2021
    default-extensions:
        QuasiQuotes,
        OverloadedStrings,
        LambdaCase

test-suite test-homepage
    default-language: GHC2021
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    build-depends:
        base,
        lib-homepage

executable homepage
    main-is:          Main.hs
    other-modules:
        Footer,
        Header,
        Index,
        Layout,
        Pages.Pages,
        Pages.Search.Search,
        Pages.Contact.Contact,
        Pages.Projects.Projects,
        Pages.Projects.Snake,
        Pages.Projects.Brainfuck,
        Pages.Projects.Editor,
        Pages.Guestbook.Guestbook,
        Pages.Sources.Sources,
        Pages.Sources.Repo,
        Pages.Admin.Admin,
        Api.Api,
        Api.Delete,
        Api.Get,
        Api.Post,
        Api.Put,
        Api.Types

    build-depends:
        base,
        ihp-hsx,
        blaze-html,
        text,
        warp,
        wai,
        http-types,
        blaze-builder,
        utf8-string,
        bytestring,
        time,
        uuid,
        directory,
        aeson,
        aeson-qq,
        split,
        password,
        cryptonite,
        string-random,
        regex-compat,
        http-conduit,
        yaml,
        persistent,
        persistent-mysql,
        monad-logger,
        matplotlib,
        raw-strings-qq,
        lib-homepage

    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        QuasiQuotes,
        OverloadedStrings,
        LambdaCase

    ghc-options:
        -threaded

executable repl-homepage
    main-is: Interactive.hs

    build-depends:
        base,
        ihp-hsx,
        blaze-html,
        text,
        warp,
        wai,
        http-types,
        blaze-builder,
        utf8-string,
        bytestring,
        time,
        uuid,
        directory,
        aeson,
        split,
        password,
        cryptonite,
        string-random,
        regex-compat,
        http-conduit,
        yaml,
        persistent,
        persistent-mysql,
        monad-logger,
        lib-homepage

    hs-source-dirs: app
    default-extensions:
        QuasiQuotes,
        OverloadedStrings
